# B12---Developing-Named-Entity-Recognition-NER-Models-for-Financial-Data-Extraction

./: .gitignore  LICENSE  LICENSE.txt  README.md  Untitled.ipynb  VI_nlp_text_prepro.ipynb  app.py  calculate_wer.py  compare_pdf_extractors.py  convert.py  converter.py  doc_converter.py  document_converter.py  extract_docling.py  extractors.py  finance_ner.py  finance_sentiment.py  finance_visualization.html  groq.py  import nltk.py  input.md  langextract.py  llm_document_ai.py  main.py  model.py  my_cleaner.py  my_extractor_v1.py  my_extractor_v2.py  my_output_pdfminer.txt  my_output_pdfminer_clean.txt  my_output_pymupdf.txt  my_output_pymupdf_clean.txt  my_wer_eval.py  my_wer_final.py  ner_langextract.py  ner_module.py  ner_results_from_pdf.md  ner_test.py  nlp_pipeline.py  nlp_processor.py  (+10 more)
1-pdf_parser_evaluation/: parser_report.docx
1. pdf_parser_evaluation/: PDF PARSER EVALUATION RESULT.docx
3. Docling_Project/: run_docling.py
3_Docling_Project/: run_docling.py
4-finance_nlp_task/: nlp_task.py
4. finance_nlp_task/: nlp_task.py
4_finance_nlp_task/: nlp_task.py  pdf_to_txt.py
API_pdftomd/: convert.py  main.py
Complete_Fullstack_app/: index.html  main.py  style.css
VI_conversion_module/: main.py
VI_docling_wer/: calculate.py
VI_pdfparsers/: evaluate.py
backend/: sentiment_analysis.py
docs/: README.md
file folder/: finance_pipeline.py  resume_analyzer.py  sentiment_analysis.py
final project/: app.js  download_model.py  index.html  main.py  (+1 more)
final_task/backend/: document_converter.py  langextract_service.py  pyproject.toml  requirements.txt
(+210 files in other folders)
